# shm-float-pipeline

./: CMakeLists.txt  CMakeLists.txt   README.md  build.sh  consumer2.txt  copyCMakeLists_workversion  producer2.txt  run.sh  style.sh
include/: compressor.h  metrics.h  packet.h  shm_ring_buffer.h
scripts/: build.sh  gen_data.sh  run.sh  style.sh
src/: compressor.cpp  consumer.cpp  metrics.cpp  producer.cpp  shm_ring_buffer.cpp
src/core/: compressor.cpp  consumer.cpp  metrics.cpp  producer.cpp  shm_ring_buffer.cpp
src/include/: compressor.h  metrics.h  packet.h  shm_ring_buffer.h
tests/: test_utils.cpp
